--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
+    <h1>D424 – Software Engineering Task 3</h1>
+    <h2>Application Name: WGU Term Tracker</h2>
+    <h2>Student: Eric Day - 011579679</h2>
     <p>
     The mobile application will allow users to register a username, password, and indicate if they are an instructor or student. For users that already have an account, they can enter their username and password to login.
     </p>
@@ -18,6 +21,6 @@
     <p>
     The mobile application will use an SQLite database to save terms, courses, assessments, and user data. User passwords will be encrypted in the database.
     </p>
-    <a href="app.APK">Download APK</a>
+    <a href="app.apk">Download APK</a>
   </body>
 </html>
